# gcp-quick-utils

./: README.md  local.sh  pyproject.toml  setup.py
gcpq/: cfg_service.py  console_utils.py  gcp_cli_service.py  gcp_sections_service.py  main.py
gcpq/config/: services.yaml
pswitch/: console.py
